--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "topsjf",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "description": "MY.笔记",
   "license": "MIT",
   "type": "module",
@@ -19,9 +19,9 @@
       "vuepress-plugin-search-pro": "2.0.0-beta.126"
   },
   "devDependencies": {
-      "markdownlint-cli": "0.32.2"
+      "markdownlint-cli": "^0.32.2"
   },
-  "packageManager": "pnpm@7.16.1",
+  "packageManager": "pnpm@7.17.0",
   "engines": {
       "node": ">=14",
       "npm": ">=8",
@@ -31,7 +31,8 @@
     "peerDependencyRules": {
       "ignoreMissing": [
         "@algolia/client-search",
-        "webpack"
+        "webpack",
+        "sass-loader"
       ]
     }
   }
