--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
       "build:vite": "vuepress-vite build docs",
       "dev:vite": "vuepress-vite dev docs",
       "dev:vite-clean": "vuepress-vite dev docs --clean-cache",
-      "commit": "pnpm git-cz",
-      "postinstall": "husky install",
       "lint-md": "markdownlint **/*.md --ignore node_modules --fix"
   },
   "dependencies": {
@@ -20,18 +18,8 @@
       "vuepress-theme-hope": "2.0.0-beta.126",
       "vuepress-plugin-search-pro": "2.0.0-beta.126"
   },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-git"
-    }
-  },
   "devDependencies": {
-      "markdownlint-cli": "^0.32.2", 
-      "commitizen": "4.2.5",
-      "cz-git": "1.3.12",
-      "husky": "8.0.2",
-      "@commitlint/cli": "17.3.0",
-      "@commitlint/config-conventional": "17.3.0"
+      "markdownlint-cli": "^0.32.2"
   
   },
   "packageManager": "pnpm@7.17.0",
