--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,5 +1,6 @@
-name: 合并PR
+name: AutoMerge And Build Docs
 on:
+  #以下pr类型触发
   pull_request:
     types:
       - labeled
@@ -10,29 +11,39 @@ on:
       - ready_for_review
       - reopened
       - unlocked
+  #拉请求审查    
   pull_request_review:
     types:
       - submitted
+  check_suite:
+    types:
+      - completed
   status: {}
-
+  
 jobs:
-  auto-merge:
+  automerge:    
+    name: merge PR to main branch
     runs-on: ubuntu-latest
-    name: 合并PR到main
-    #needs: [release-please]
     steps:
-      - name: Automerge
-        uses: 'pascalgn/automerge-action@v0.14.3'
+      - id: automerge
+        name: automerge
+        uses: "pascalgn/automerge-action@v0.15.5"
         env:
           GITHUB_TOKEN: '${{ secrets.RELEASE_TOKEN }}'
           MERGE_LABELS: ''
+          #重试次数
+          MERGE_RETRIES: '0'
+          #重试间隔10s
+          MERGE_RETRY_SLEEP: '10000'
+          #合并后删除分支
+          MERGE_DELETE_BRANCH: 'true'
           MERGE_FILTER_AUTHOR: 'topsjf' 
 
   deploy-gh-pages:
     name: 部署文档
     needs: 
       #- release-please
-      - auto-merge
+      - automerge
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
