--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - id: automerge
-        name: automerge
+        name: 开始合并
         uses: "pascalgn/automerge-action@v0.15.5"
         env:
           GITHUB_TOKEN: '${{ secrets.RELEASE_TOKEN }}'
@@ -40,7 +40,7 @@ jobs:
           MERGE_FILTER_AUTHOR: 'topsjf' 
 
   deploy-gh-pages:
-    name: 部署文档
+    name: 发布文档
     needs: 
       #- release-please
       - automerge
