test: 更新配置CICD now

--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -32,6 +32,7 @@ jobs:
         env:
           GITHUB_TOKEN: '${{ secrets.RELEASE_TOKEN }}'
           MERGE_LABELS: ''
+          MERGE_COMMIT_MESSAGE: "pull-request-title"
           #重试次数
           MERGE_RETRIES: '0'
           #重试间隔10s
