--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,4 +1,4 @@
-name: AutoMerge And Build Docs
+name: AutoMerge
 
 on:
   #以下pr类型触发
@@ -38,56 +38,5 @@ jobs:
           #重试间隔10s
           MERGE_RETRY_SLEEP: '10000'
           #合并后删除分支
-          MERGE_DELETE_BRANCH: 'true'
+          #MERGE_DELETE_BRANCH: 'true'
           MERGE_FILTER_AUTHOR: 'topsjf' 
-
-  deploy-gh-pages:
-    name: 发布文档
-    needs: 
-      #- release-please
-      - automerge
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          # 如果你文档需要 Git 子模块，取消注释下一行
-          # submodules: true
-
-      - name: 安装 pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 7
-          run_install: true
-
-      - name: 设置 Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-          cache: pnpm
-
-      - name: 安装 Deps
-        run: pnpm install --frozen-lockfile
-
-      - name: 构建文档
-        env:
-          BASE: /
-          HOSTNAME: https://topsjf.github.io/
-          NODE_OPTIONS: --max_old_space_size=8192
-        run: |-
-          pnpm run build:vite
-          > docs/.vuepress/dist/.nojekyll
-
-      - name: 部署文档
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          # 部署到 topsjf/v2 仓库
-          repository-name: topsjf/topsjf.github.io
-          # 部署的分支名称
-          branch: gh-pages
-          folder: docs/.vuepress/dist
-          token: ${{ secrets.ACCESS_TOKEN }}
-          single-commit: true
-
-
