test: 测试cicd工作流

--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -38,5 +38,5 @@ jobs:
           #重试间隔10s
           MERGE_RETRY_SLEEP: '10000'
           #合并后删除分支
-          #MERGE_DELETE_BRANCH: 'true'
+          MERGE_DELETE_BRANCH: 'true'
           MERGE_FILTER_AUTHOR: 'topsjf' 
