--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,8 +11,9 @@ on:
       - LICENSE
       
 env:
-  - PNAME: topsjf
-  - BRANCH: release-log
+  PNAME: topsjf
+  BRANCH: release-log
+  
 jobs:
   release-please:
     name: 生成日志与创建PR
@@ -20,7 +21,7 @@ jobs:
     steps:
       - uses: google-github-actions/release-please-action@v3
         with:
-          default-branch: ${{BRANCH}}
+          default-branch: ${{env.BRANCH}}
           token: ${{ secrets.RELEASE_TOKEN }}
           release-type: node
           package-name: ${{env.PNAME}}
