--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,11 +21,14 @@ jobs:
     steps:
       - uses: google-github-actions/release-please-action@v3
         with:
-          default-branch: ${{env.BRANCH}}
+          #添加文件
+          extra-files: |
+            echo ".github" >> .gitignore
           token: ${{ secrets.RELEASE_TOKEN }}
           release-type: node
+         # repo-url: ${{env.BRANCH}}
           package-name: ${{env.PNAME}}
-          pull-request-title-pattern: 'chore${scope}: release${component} ${branch?} ${version}'
+          pull-request-title-pattern: 'chore${scope}: release${component} ${version}'
           changelog-types: '[{"type": "types", "section":"Types", "hidden": false},{"type": "revert", "section":"⏪️Reverts", "hidden": false},{"type": "feat", "section": "✨Features", "hidden": false},{"type": "fix", "section": "🐛Bug Fixes", "hidden": false},{"type": "improvement", "section": "⚙️Feature Improvements", "hidden": false},{"type": "docs", "section":"📚Docs", "hidden": false},{"type": "style", "section":"🎨Styling", "hidden": false},{"type": "refactor", "section":"♻️Code Refactoring", "hidden": false},{"type": "perf", "section":"⚡️Performance Improvements", "hidden": false},{"type": "test", "section":"🧪Tests", "hidden": false},{"type": "build", "section":"📦️Build System", "hidden": false},{"type": "ci", "section":"🎡CI", "hidden":false}]'
 
 
