--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "build:vite": "vuepress-vite build docs",
         "dev:vite": "vuepress-vite dev docs",
         "dev:vite-clean": "vuepress-vite dev docs --clean-cache",
-        "test": "echo demo test out。&& exit $1",
+        "test": "echo demo test out! && exit ",
         "commit": "git-cz",
         "lint-md": "markdownlint **/*.md --ignore node_modules --fix",
         "prepare": "husky install"
@@ -21,8 +21,11 @@
         "vuepress-vite": "2.0.0-beta.53"
     },
     "devDependencies": {
+        "@commitlint/cli": "^17.3.0",
+        "@commitlint/config-conventional": "^17.3.0",
         "commitizen": "^4.2.5",
         "cz-conventional-changelog": "^3.3.0",
+        "husky": "^8.0.2",
         "markdownlint-cli": "^0.32.2"
     },
     "packageManager": "pnpm@7.17.0",
