--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "build:vite": "vuepress-vite build docs",
         "dev:vite": "vuepress-vite dev docs",
         "dev:vite-clean": "vuepress-vite dev docs --clean-cache",
-        "test": "echo demo test out! && exit ",
+        "test": "echo demo test out!",
         "commit": "git-cz",
         "lint-md": "markdownlint **/*.md --ignore node_modules --fix",
         "prepare": "husky install"
@@ -16,8 +16,8 @@
         "@vuepress/client": "2.0.0-beta.53",
         "vue": "^3.2.45",
         "vuepress": "2.0.0-beta.53",
-        "vuepress-plugin-search-pro": "2.0.0-beta.129",
-        "vuepress-theme-hope": "2.0.0-beta.129",
+        "vuepress-plugin-search-pro": "2.0.0-beta.130",
+        "vuepress-theme-hope": "2.0.0-beta.130",
         "vuepress-vite": "2.0.0-beta.53"
     },
     "devDependencies": {
