--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,24 +1,17 @@
-name: AutoMerge
+name: Auto Merge
 
 on:
   #以下pr类型触发
   pull_request:
     types:
       - labeled
-      - unlabeled
-      - synchronize
-      - opened
-      - edited
-      - ready_for_review
+    #  - unlabeled
+    #  - synchronize
+    #  - opened
+   #   - edited
+    #  - ready_for_review
       - reopened
       - unlocked
-  #拉请求审查    
-  pull_request_review:
-    types:
-      - submitted
-  check_suite:
-    types:
-      - completed
   status: {}
   
 jobs:
@@ -33,7 +26,7 @@ jobs:
           GITHUB_TOKEN: '${{ secrets.RELEASE_TOKEN }}'
           MERGE_LABELS: ''
           #title，and，description
-          MERGE_COMMIT_MESSAGE: "pull-request-title"
+          MERGE_COMMIT_MESSAGE: "Auto Merge {pullRequest.number} {pullRequest.title}"
           #重试次数
           MERGE_RETRIES: '0'
           #重试间隔10s
