--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -26,7 +26,7 @@ jobs:
           GITHUB_TOKEN: '${{ secrets.RELEASE_TOKEN }}'
           MERGE_LABELS: ''
           #title，and，description
-          MERGE_COMMIT_MESSAGE: "Auto Merge pr#{pullRequest.number} {pullRequest.title}"
+          MERGE_COMMIT_MESSAGE: "Merge PR(#{pullRequest.number}) {pullRequest.title}"
           #重试次数
           MERGE_RETRIES: '0'
           #重试间隔10s
